2001-09-12  jacob berkman  <jacob@ximian.com>

	* configure.in:
	* Makefile.am (SUBDIRS): build gsm/ and smproxy/

2001-09-04  Abel Cheung  <maddog@linux.org.hk>

	* (recursive)*.desktop, *.directory, *.soundlist, *.hint: Rename zh_TW.Big5 to zh_TW .

2001-09-01  Darin Adler  <darin@bentspoon.com>

	* Makefile.am:
	* configure.in:
	Don't bother with intl directory.

2001-08-30  jacob berkman  <jacob@ximian.com>

	* Makefile.am (SUBDIRS): 
	* configure.in: build gnome-terminal
	: update things to not need gnome1-compat - at least until the
	libgnome* thing is more stabilized
	: check if libgnomeui was linked against -lSM (for gnome-session,
	which i won't be comimtting yet)

2001-08-22  Abel Cheung <maddog@linux.org.hk>

	* configure.in (ALL_LINGUAS): zh_TW.Big5 -> zh_TW .
	
2001-08-18  Martin Baulig  <baulig@suse.de>

	* configure.in (MAINT): Define and AC_SUBST this.

2001-08-17  Martin Baulig  <baulig@suse.de>

	* configure.in (GNOME_DESKTOP): Require bonobo-config.

2001-08-09  Martin Baulig  <baulig@suse.de>

	* configure.in (PANEL): Require libgnome1-compat.

2001-08-06  Gregory Leblanc  <gleblanc@linuxweasel.com>

	* gnome-core.spec.in: a few tiny updates, preparing for a
	flamewar, err, discussion, about this strategy.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* configure.in (GNOME_DESKTOP): Added pkg-config checks for the
	gnome-desktop directory.
	
2001-08-06  Martin Baulig  <baulig@suse.de>

	* configure.in, autogen.sh: Updated for the GNOME 2 platform.

	* Makefile.am: Disabled all subdirs except idl, gnome-ditem and panel.

2001-08-06  Martin Baulig  <baulig@suse.de>

	* gnome-desktop/: New directory. This is the ditem code which was
	in libgnome/monikers and libgnome/libgnome/gnome-ditem.[ch].

2001-08-06  Martin Baulig  <baulig@suse.de>

	gnome-core has been branched for GNOME 1.4 - please use the gnome-core-1-4
	branch for GNOME 1.4 - the HEAD is for GNOME 2.0.

	If you have a checked out copy of gnome-core, do a

		cvs update -r gnome-core-1-4
