@@ -40,20 +40,18 @@ GNOME_PLATFORM_GNOME_2(yes)
 dnl If you add a version number here, you *must* add an AC_SUBST line for
 dnl it too, or it will never make it into the spec file!
 
-GTK_REQUIRED=1.3.1
-GDK_PIXBUF_REQUIRED=1.3.1
-LIBGLADE_REQUIRED=0.16
-LIBGNOME_REQUIRED=1.96.0
-dnl LIBGNOME1COMPAT_REQUIRED=1.96.0
-LIBGNOMEUI_REQUIRED=1.96.0
-LIBGNOMECANVAS_REQUIRED=1.102.0
-ORBIT_REQUIRED=2.3.91
-XML_REQUIRED=2.2.8
-LIBCAPPLET_REQUIRED=1.4.0
-LIBZVT_REQUIRED=1.97.0
-SCROLLKEEPER_REQUIRED=0.1.4
 BONOBO_CONFIG_REQUIRED=0.1.3
-
+GDK_PIXBUF_REQUIRED=1.3.1
+GTK_REQUIRED=1.3.1
+LIBCAPPLET_REQUIRED=1.4.0
+LIBGLADE_REQUIRED=1.99.2
+LIBGNOME_REQUIRED=1.96.0
+LIBGNOMECANVAS_REQUIRED=1.102.0
+LIBGNOMEUI_REQUIRED=1.96.0
+LIBZVT_REQUIRED=1.97.0
+ORBIT_REQUIRED=2.3.91
+SCROLLKEEPER_REQUIRED=0.1.4
+XML_REQUIRED=2.2.8
 
 AC_SUBST(GTK_REQUIRED)
 AC_SUBST(GDK_PIXBUF_REQUIRED)
@@ -80,7 +78,7 @@ PKG_CHECK_MODULES(GNOME_DESKTOP, ORBit-2.0 >= $ORBIT_REQUIRED gdk-pixbuf-2.0 >= 
 AC_SUBST(GNOME_DESKTOP_CFLAGS)
 AC_SUBST(GNOME_DESKTOP_LIBS)
 
-PKG_CHECK_MODULES(GNOME_TERMINAL, ORBit-2.0 >= $ORBIT_REQUIRED gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED gtk+-2.0 >= $GTK_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED libzvt-2.0 >= $LIBZVT_REQUIRED)
+PKG_CHECK_MODULES(GNOME_TERMINAL, ORBit-2.0 >= $ORBIT_REQUIRED gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED gtk+-2.0 >= $GTK_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED libzvt-2.0 >= $LIBZVT_REQUIRED libglade-2.0 >= $LIBGLADE_REQUIRED)
 AC_SUBST(GNOME_TERMINAL_CFLAGS)
 AC_SUBST(GNOME_TERMINAL_LIBS)
 
@@ -89,6 +87,14 @@ AC_SUBST(GNOME_SESSION_CFLAGS)
 AC_SUBST(GNOME_SESSION_LIBS)
 
 dnl -----------------------------------------------------------
+
+dnl
+dnl libglade conversion script, needed by gnome-terminal
+dnl
+AC_PATH_PROG(LIBGLADE_CONVERT, libglade-convert)
+if test -z $LIBGLADE_CONVERT; then
+	AC_MSG_ERROR([libglade-convert (from libglade 2.0) is needed to build gnome-terminal.])
+fi
 
 dnl ================================
 dnl | ORBit2 |---------------------------
