@@ -1,3 +1,8 @@
+2001-09-14  jacob berkman  <jacob@ximian.com>
+
+	* configure.in: look for libglade-convert, and error out if it
+	isn't present
+
 2001-09-12  jacob berkman  <jacob@ximian.com>
 
 	* configure.in:
